[fix] spinner elemnt spacing.

--- a/client/src/components/common/EndOfContent/EndOfContent.scss
+++ b/client/src/components/common/EndOfContent/EndOfContent.scss
@@ -3,7 +3,6 @@
   text-align: center;
   position: relative;
   z-index: 1;
-  padding: 2em 0;
 
   &__white {
     color: white;
