--- a/client/src/components/common/Spinner/Spinner.scss
+++ b/client/src/components/common/Spinner/Spinner.scss
@@ -1,6 +1,7 @@
 @import '../../../assets/styles/utils/mixins/centerlized-content';
 
 .spinner {
+  position: relative;
   z-index: 3;
 
   &--space-around {
