--- a/client/src/components/pages/Posts/helpers/PostList/PostList.scss
+++ b/client/src/components/pages/Posts/helpers/PostList/PostList.scss
@@ -1,3 +1,4 @@
 .post-list {
   list-style: none;
+  margin-bottom: 2em;
 }
